# awesomecalculator

./: pyproject.toml
.github/workflows/: build_install.yml
src/calculator/: __init__.py
