[project]
name = "awesomecalculator"
version = "1.0.0"
description = "Calc stuff"
readme = "README.md"
authors = [
    { name = "Vineet Vaidya", email = "vineet21us2000@gmail.com" }
]
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

keywords = ["calculator", "tutorial"]

dependencies = [
    'tomli; python_version < "3.12"'
]

requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/VineetVaidya/awesomecalculator"

[project.scripts]
awesomecalculator = "calculator.__main__:main"
